# envscanner

./: README.md  pyproject.toml  requirements.txt  settings.json
envscanner/: cli.py  config.py  env_reader.py  project_path.py
